@@ -1,5 +1,6 @@
 6 March 2007: Wouter
 	- Testbed works with threading (different machines, different options).
+	- alloc work, does the special type.
 
 2 March 2007: Wouter
 	- do not compile fork funcs unless needed. Otherwise will give
